# Backend/swagger.json
@@ -1872,6 +1872,39 @@
         }
       }
     },
+    "/media/Get/ComplimentaryMessages/{eventId}": {
+      "get": {
+        "description": "Get Media files uploaded by a guest for the event",
+        "tags": ["Media"],
+        "parameters": [
+          {
+            "name": "eventId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/media/upload": {
       "post": {
         "description": "",
@@ -1938,6 +1971,34 @@
             "required": true,
             "type": "object",
             "schema": { "$ref": "#/definitions/schema/Media" }
+          }
+        ],
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/media/UploadMessage": {
+      "post": {
+        "description": "",
+        "tags": ["Media"],
+        "parameters": [
+          {
+            "name": "file",
+            "in": "body",
+            "required": true,
+            "type": "object",
+            "schema": { "$ref": "#/definitions/schema/ComplimentaryMessage" }
           }
         ],
         "security": [
@@ -2547,6 +2608,23 @@
           },
           "files": {
             "type": "object",
+            "required": true
+          }
+        }
+      },
+      "ComplimentaryMessage": {
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "string",
+            "required": true
+          },
+          "eventId": {
+            "type": "string",
+            "required": true
+          },
+          "message": {
+            "type": "string",
             "required": true
           }
         }
